src/SupportApp/main/default/objects/Support_Request__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>