src/SupportApp/main/default/objects/Support_Request__c/fields/CreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>CreatedByMe__c</fullName>
    <formula>CreatedById =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Me</label>
    <type>Checkbox</type>
</CustomField>