src/SupportApp/main/default/objects/Support_Request__c/fields/Department_GLV2__c.field-meta.xml
<CustomField>
    <fullName>Department_GLV2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The department where the Request is from ( Accounting Variable GLV2 )</description>
    <inlineHelpText>The department where the Request is from( Accounting Variable GLV2 )</inlineHelpText>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Support Requests</relationshipLabel>
    <relationshipName>Support_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>