src/SupportApp/main/default/objects/Support_Request__c/fields/Experience_Evaluation_Report__c.field-meta.xml
<CustomField>
    <fullName>Experience_Evaluation_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Experience Evaluation Report</label>
    <referenceTo>Experience_Evaluation_Report__c</referenceTo>
    <relationshipName>Learning_and_Developments_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>