src/SupportApp/main/default/objects/Support_Request__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <formula>OR( ISPICKVAL( Status__c, &apos;Done&apos; ), ISPICKVAL( Status__c, &apos;Denied&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>