src/SupportApp/main/default/objects/Support_Request__c/fields/Location_GLV1__c.field-meta.xml
<CustomField>
    <fullName>Location_GLV1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Location where the Request stems from (Accounting Variable GLV1)</description>
    <inlineHelpText>The Location where the Request stems from (Accounting Variable GLV1)</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Support Requests (Location)</relationshipLabel>
    <relationshipName>Support_Requests1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>