src/SupportApp/main/default/objects/Support_Request__c/fields/Reason_for_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Denial__c</fullName>
    <description>The reason you are not acting on this request</description>
    <inlineHelpText>The reason you are not acting on this request</inlineHelpText>
    <label>Reason for Denial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>