src/SupportApp/main/default/objects/Support_Request__c/fields/Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Date__c</fullName>
    <inlineHelpText>When would you like this completed by?</inlineHelpText>
    <label>Requested Due Date</label>
    <type>Date</type>
</CustomField>