src/SupportApp/main/default/objects/Support_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Legend University New Class Request</fullName>
            </value>
            <value>
                <fullName>Legend University New Course Request</fullName>
            </value>
            <value>
                <fullName>Legend University Update</fullName>
            </value>
            <value>
                <fullName>New Class Enrolment For Legend University</fullName>
            </value>
            <value>
                <fullName>New Personnel Training Agenda</fullName>
            </value>
            <value>
                <fullName>New Process Documentation</fullName>
            </value>
            <value>
                <fullName>New User Enrolment For Legend University</fullName>
            </value>
            <value>
                <fullName>Other - That can be described</fullName>
            </value>
            <value>
                <fullName>Process Document Review</fullName>
            </value>
            <value>
                <fullName>Process Document Update</fullName>
            </value>
            <value>
                <fullName>Re-Training Request</fullName>
            </value>
            <value>
                <fullName>Seasonal Training Request</fullName>
            </value>
            <value>
                <fullName>Training Agenda Template Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>