src/SupportApp/main/default/objects/Support_Request__c/validationRules/Completed_Info_required_on_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Info_required_on_Completion</fullName>
    <active>true</active>
    <description>Completed On and Completed At are required when the request is completed</description>
    <errorConditionFormula>AND( OR( ISNULL(Completed_By__c), ISNULL(Completed_On__c)  ),   IsComplete__c  )</errorConditionFormula>
    <errorMessage>Completed By and Completed On Fields are required if the Request is Complete</errorMessage>
</ValidationRule>