src/SupportApp/main/default/objects/Support_Request__c/validationRules/Reason_Required_for_Denied.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required_for_Denied</fullName>
    <active>true</active>
    <description>You must supply a reason why the request was denied</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &apos;Denied&apos;), ISNULL( Reason_for_Denial__c ))</errorConditionFormula>
    <errorMessage>Reason For Denial is Required for a Denied Request</errorMessage>
</ValidationRule>