src/SupportApp/main/default/objects/Support_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Location_GLV1__c</columns>
    <columns>Department_GLV2__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>