src/SupportApp/main/default/objects/Support_Request__c/listViews/All_My_Assigned_Requests.listView-meta.xml
<ListView>
    <fullName>All_My_Assigned_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Location_GLV1__c</columns>
    <columns>Department_GLV2__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Assigned Requests</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Director_of_Support</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>