src/SupportApp/main/default/objects/Support_Request__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Location_GLV1__c</columns>
    <columns>Department_GLV2__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsComplete__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My In Progress Requests</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Director_of_Support</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>