src/SupportApp/main/default/objects/Support_Request__c/listViews/My_Submitted_Requests.listView-meta.xml
<ListView>
    <fullName>My_Submitted_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Location_GLV1__c</columns>
    <columns>Department_GLV2__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedByMe__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All My Submitted Requests</label>
</ListView>