src/SupportApp/main/default/objects/Support_Request__c/listViews/Support_Queue_Support_Request.listView-meta.xml
<ListView>
    <fullName>Support_Queue_Support_Request</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Location_GLV1__c</columns>
    <columns>Department_GLV2__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Queue</filterScope>
    <label>Unassigned Requests</label>
    <queue>Support_Queue</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>Director_of_Support</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>